unpackaged/main/default/objects/CustomerStory__c/CustomerStory__c.object-meta.xml
<CustomObject>
    <description>Reference Customers can be contacted by Sales</description>
    <label>Reference Customer</label>
    <nameField>
        <displayFormat>CS-{000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>