unpackaged/main/default/objects/CustomerStory__c/fields/Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reference Customers (Account Contact)</relationshipLabel>
    <relationshipName>Reference_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>