unpackaged/main/default/objects/CustomerStory__c/fields/Approved_Request_Counter__c.field-meta.xml
<CustomField>
    <fullName>Approved_Request_Counter__c</fullName>
    <description>Approved Request Counter</description>
    <inlineHelpText>Count approved calls and visits</inlineHelpText>
    <label>Approved Request Counter</label>
    <summaryFilterItems>
        <field>Customer_Story_Workflow_Requests__c.Request_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Customer_Story_Workflow_Requests__c.Type__c</field>
        <operation>equals</operation>
        <value>Reference Call, Site Visit</value>
    </summaryFilterItems>
    <summaryForeignKey>Customer_Story_Workflow_Requests__c.Customer_Story__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>