unpackaged/main/default/objects/CustomerStory__c/fields/CAM_CDM__c.field-meta.xml
<CustomField>
    <fullName>CAM_CDM__c</fullName>
    <formula>Account__r.Owner.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAM/CDM</label>
    <type>Text</type>
</CustomField>