unpackaged/main/default/objects/CustomerStory__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>TechnologyOne Employee</inlineHelpText>
    <label>Nominated By</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Value does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>Contact.Account_Name_Hidden__c</field>
            <operation>contains</operation>
            <value>TechnologyOne</value>
        </filterItems>
        <infoMessage>Search TechnologyOne Employee Contact Record</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reference Customers</relationshipLabel>
    <relationshipName>CustomerStories</relationshipName>
    <type>Lookup</type>
</CustomField>