unpackaged/main/default/objects/CustomerStory__c/fields/Lessons_Learned__c.field-meta.xml
<CustomField>
    <fullName>Lessons_Learned__c</fullName>
    <inlineHelpText>External use on approval, unless pre-approved</inlineHelpText>
    <label>Quotes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>