unpackaged/main/default/objects/CustomerStory__c/fields/Limit_contact_number__c.field-meta.xml
<CustomField>
    <fullName>Limit_contact_number__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Limit Number of times can be contacted a month</description>
    <label>Contact Limit Number</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>