unpackaged/main/default/objects/CustomerStory__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <label>Reference For</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Managed Services</fullName>
            </value>
            <value>
                <fullName>Business Analytics</fullName>
            </value>
            <value>
                <fullName>Ci -&gt; CiA</fullName>
            </value>
            <value>
                <fullName>Consulting</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>DxP</fullName>
            </value>
            <value>
                <fullName>Enterprise Asset Management</fullName>
            </value>
            <value>
                <fullName>Enterprise Budgeting</fullName>
            </value>
            <value>
                <fullName>Enterprise Cash Receipting</fullName>
            </value>
            <value>
                <fullName>Enterprise Content Management</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>OneAsset</fullName>
            </value>
            <value>
                <fullName>OneCare</fullName>
            </value>
            <value>
                <fullName>OneCorporate</fullName>
            </value>
            <value>
                <fullName>OneCouncil</fullName>
            </value>
            <value>
                <fullName>OneEducation</fullName>
            </value>
            <value>
                <fullName>OneGovernment</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Performance Planning</fullName>
            </value>
            <value>
                <fullName>Project Lifecycle Management</fullName>
            </value>
            <value>
                <fullName>Property and Rating</fullName>
            </value>
            <value>
                <fullName>SaaS</fullName>
            </value>
            <value>
                <fullName>Spatial</fullName>
            </value>
            <value>
                <fullName>Stakeholder Management</fullName>
            </value>
            <value>
                <fullName>Strategic Asset Management</fullName>
            </value>
            <value>
                <fullName>Student Management</fullName>
            </value>
            <value>
                <fullName>Supply Chain Management</fullName>
            </value>
            <value>
                <fullName>Support.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>