unpackaged/main/default/objects/CustomerStory__c/fields/Reference_Activity__c.field-meta.xml
<CustomField>
    <fullName>Reference_Activity__c</fullName>
    <label>Reference Activity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Articles or Publications</fullName>
            </value>
            <value>
                <fullName>Case study material</fullName>
            </value>
            <value>
                <fullName>Logo usage</fullName>
            </value>
            <value>
                <fullName>Media announcements</fullName>
            </value>
            <value>
                <fullName>Quotes</fullName>
            </value>
            <value>
                <fullName>Reference calls</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Site visits</fullName>
            </value>
            <value>
                <fullName>Speaking at events</fullName>
            </value>
            <value>
                <fullName>Usage of name in tenders</fullName>
            </value>
            <value>
                <fullName>Video Testimonials</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>