unpackaged/main/default/objects/CustomerStory__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <description>Customer located region</description>
    <formula>text(Account__r.Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Region</label>
    <type>Text</type>
</CustomField>