unpackaged/main/default/objects/CustomerStory__c/fields/Star_Rating__c.field-meta.xml
<CustomField>
    <fullName>Star_Rating__c</fullName>
    <formula>IMAGE( 
CASE(Rating__c, &quot;1&quot;, &quot;/resource/stars_11&quot;, &quot;2&quot;, &quot;/resource/stars_21&quot;, 
&quot;3&quot;, &quot;/resource/stars_31&quot;,&quot;&quot;),&quot;&quot;,20,100)</formula>
    <inlineHelpText>INTERNAL USE ONLY</inlineHelpText>
    <label>Star Rating</label>
    <type>Text</type>
</CustomField>