unpackaged/main/default/objects/CustomerStory__c/fields/Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Synopsis__c</fullName>
    <inlineHelpText>Internal use only</inlineHelpText>
    <label>Account Overview</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>