unpackaged/main/default/objects/CustomerStory__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>Link to Marketing Asset/s</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>