unpackaged/main/default/objects/CustomerStory__c/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <formula>TEXT(Account__r.Vertical_Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Industry/Vertical</label>
    <type>Text</type>
</CustomField>