unpackaged/main/default/objects/CustomerStory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>Products__c</columns>
    <columns>Star_Rating__c</columns>
    <columns>Limit_contact_number__c</columns>
    <columns>Approved_Request_Counter__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>